--- a/index.html
+++ b/index.html
@@ -108,20 +108,21 @@
               <i class="fa-solid fa-medal" id="about-tab"></i>
               <p id="about-div-title">Experience</p>
               <h6>Fresher</h6>
-              <h6>Full Stack Developer</h6>
+              <h6>Java Full Stack Developer</h6>
             </div>
             <div class="about-education">
               <i class="fa-solid fa-user-group" id="about-tab"></i>
               <p id="about-div-title">Education</p>
-              <h6>B.Tech Information Technology</h6>
+              <h6>B.Tech 2022-26 </h6>
+              <h6>Information Technology</h6>
             </div>
           </div>
 
           <p id="para" class="hiddenY">
             Hi! I'm Dheeraj Lowanshi, a
-            <span class="mail">full stack web developer</span>. I doing my
+            <span class="mail">Java Full Stack Developer</span>. I doing my
             bachelor of technology from oriental institute of science and
-            technology bhopal and my specialization
+            technology, bhopal and my specialization
             <span class="insta">information technology</span>.
           </p>
         </div>
@@ -163,7 +164,7 @@
           </div>
         </div>
         <div class="backend hiddenY">
-          <h5 id="lang-title">Programming Language</h5>
+          <h5 id="lang-title">Programming Languages</h5>
           <div class="lang-1">
             <article>
               <img src="assets/C++.png" alt="" id="lang-img" />
@@ -225,7 +226,7 @@
           >
           or
           <a href="https://www.linkedin.com/in/dheeraj-lowanshi/ "
-            ><span class="social linkdin">linkdin</span></a
+            ><span class="social linkdin">linkedin</span></a
           >
         </h4>
       </div>
